--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-html { font: Trebuchet 20px sans-serif; }
+html { font: Trebuchet 20pt sans-serif; }
 body { background-color: azure; margin: none; }
 a { color: #444444 }
