--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
-html, body { font: 20px Trebuchet sans-serif; }
+html, body { font: 20px Trebuchet, sans-serif; }
 body { background-color: azure; margin: none; }
 a { color: #444444 }
