--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,4 @@ li:nth-child(2n) { background-color: #dadada }
 .main-content { background-color: #ffffff; padding: 20px 40px; height: 85%; width: 1600px; margin: 10px auto 20px auto; }
 .wrap-content { background-color: #e0fbfb; padding: 20px 40px; margin: 100px auto 20px auto; width: 90%}
 .headline { background-color: #69daf7; margin: 0 auto 0 auto; padding: 0px 0px; color: #198aa7; border-bottom: 3px solid #69bbff; position: fixed; top: 0px;width: 100%}
+.headline img { border-radius: 16px }
