--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,10 @@ a:hover { text-decoration: underline }
 h1 { color: #444 }
 h2 { color: #555 }
 h3 { color: #666 }
-ul { list-style-type: none; border: 0 solid silver; border-width: 0 0 1px 1px; padding: 0 0; min-width: 100px; max-width: 150px; }
-li { border: 0 solid silver; border-width: 1px 1px 0 0; padding: .5em }
-li:nth-child(2n+1) { background-color: #fff }
-li:nth-child(2n) { background-color: #dadada }
+table { border: 0 solid silver; border-width: 0 0 1px 1px; padding: 0 0; min-width: 100px; max-width: 150px; }
+td,th { border: 0 solid silver; border-width: 1px 1px 0 0; padding: .5em }
+tr:nth-child(2n+1) { background-color: #fff }
+tr:nth-child(2n) { background-color: #dadada }
 
 .main-content { background-color: #ffffff; padding: 20px 40px; height: 85%; width: 1600px; margin: 10px auto 20px auto; }
 .wrap-content { background-color: #e0fbfb; padding: 20px 40px; margin: 100px auto 20px auto; width: 90%}
