--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ h3 { color: #666 }
 table { border: 0 solid silver; border-width: 1px 1px 1px 1px; padding: 0 0; min-width: 100px; max-width: 150px; border-collapse: collapse}
 th:first-child,td:first-child { border-width: 0px 1px 0 0; }
 td,th { border: 0 solid silver; border-width: 0px 0px 0 0; padding: 0.5em; }
+th { border-width: 0 0 1px 0; }
 tr:nth-child(2n+1) { background-color: #fff }
 tr:nth-child(2n) { background-color: #dadada }
 
